<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Button
		android:id="@+id/startRecBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/stopRecBtn"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="54dp"
		android:hint="@string/startRecHint"
		android:text="@string/startRecBtn" />
	<Button
		android:id="@+id/stopRecBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/startRecBtn"
		android:layout_centerVertical="true"
		android:hint="@string/stopRecHint"
		android:text="@string/stopRecBtn" />

</RelativeLayout> 
